--- a/view/admin/install.html
+++ b/view/admin/install.html
@@ -16,7 +16,7 @@
     <h5>初次安装时请检查：</h5>
     <ol>
         <li>请确认你的 PHP 版本 ≥ 8.0.0.</li>
-        <li>本项目现使用ThinkPHP框架，如果是使用宝塔面板需要在「网站」——「站点设置」——「伪静态」设置 “thinkphp”，然后在「网站目录」中修改「运行目录」为“/public”。</li>
+        <li>本项目现使用ThinkPHP框架，如果是使用宝塔面板需要在「网站」——「站点设置」——「伪静态」设置 "thinkphp"，然后在「网站目录」中修改「运行目录」为"public"。</li>
         <li>请确认当前目录及目录下所有文件 PHP 有足够访问权限。</li>
         <li>请确认已安装 curl 及其扩展。</li>
         <li>请确认当前页面正确加载了 JavaScript 文件。如点击按钮无反映说明为正常加载，检查文件是否完整 并 刷新浏览器 一般能解决此问题。</li>
@@ -209,7 +209,7 @@
                             icon: "warning",
                             showCancelButton: true,
                             confirmButtonText: "我同意",
-                            footer: '<a href="https://github.com/yuantuo666/baiduwp-php" target="_blank">GitHub 上的源代码仓库</a>'
+                            footer: '<a href="https://github.com/MoTeam-cn/baiduwp-php" target="_blank">GitHub 上的源代码仓库</a>'
                         }).then(function(e) {
                             if (e.isConfirmed) {
                                 $("#AgreeCheck").prop("checked", true);
