--- a/view/header.html
+++ b/view/header.html
@@ -9,8 +9,8 @@
 	<title><?= $site_name ?> - Settings</title>
 	<link rel="icon" href="<?php echo substr_count(think\facade\Request::pathinfo(), '/') == 0 ? '.' : '..'; ?>/favicon.ico"/>
 	<link rel="stylesheet" href="<?php echo substr_count(think\facade\Request::pathinfo(), '/') == 0 ? '.' : '..'; ?>/static/index.css?v=<?= $program_version ?>"/>
-	<link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/5.8.1/css/all.min.css"/>
-	<link rel="stylesheet" href="https://cdn.staticfile.org/bootstrap/5.3.0-alpha2/css/bootstrap.min.css"/>
+	<link rel="stylesheet" href="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/font-awesome/6.0.0/css/all.min.css"/>
+	<link rel="stylesheet" href="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/bootstrap/5.1.3/css/bootstrap.min.css"/>
 	<link rel="stylesheet" disabled id="Swal2-Dark"
 		  href="https://fastly.jsdelivr.net/npm/@sweetalert2/theme-dark@4.0.2/dark.min.css"/>
 	<link rel="stylesheet" disabled id="Swal2-Light"
